--- a/index.html
+++ b/index.html
@@ -5,55 +5,147 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Alata:wght@400&family=Josefin+Sans:wght@300&display=swap" rel="stylesheet">
   <title>Frontend Mentor | Loopstudios landing page</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-  About
-  Careers
-  Events
-  Products
-  Support
+  <section class="hero-section">
+  <header>
+    <div class="header-content-wrapper">  
+        <div>
+      <img src="./images/logo.svg" alt="Loopstudios logo" class="logo">
+    </div>
+     <button id="menu-icon" aria-label="Toggle menu" class="hamburger-toggle">
+      <img id="menu-icon-img" src="./images/icon-hamburger.svg" alt="Menu Icon">
+    </button>
+     </div>
 
-  Immersive experiences that deliver
-
-  The leader in interactive VR
-
-  Founded in 2011, Loopstudios has been producing world-class virtual reality 
+    <nav class="nav-menu" id="mobile-nav">
+      <a href="#">ABOUT</a>
+      <a href="#">CAREERS</a>
+      <a href="#">EVENTS</a>
+      <a href="#">PRODUCTS</a>
+      <a href="#">SUPPORT</a>
+    </nav>
+    
+   </header>
+ <h1>IMMERSIVE EXPERIENCES THAT DELIVER</h1>
+  </section>
+<main>
+  <div class="interactive-container">
+    <picture class="vr-logo">
+  <source media="(min-width: 768px)" srcset="images/desktop/image-interactive.jpg">
+  <img src="images/mobile/image-interactive.jpg" alt="picture of a person using virtual reality headset">
+</picture>
+   <h2>
+    THE LEADER IN INTERACTIVE VR
+   </h2>
+   <P>Founded in 2011, Loopstudios has been producing world-class virtual reality 
   projects for some of the best companies around the globe. Our award-winning 
   creations have transformed businesses through digital experiences that bind 
-  to their brand.
+  to their brand.</P>
+   </div>
+<h2>OUR CREATIONS</h2>
+<div class="creations-grid">
+<div>
+ <picture>
+  <source media="(min-width: 768px)" srcset="./images/desktop/image-deep-earth.jpg">
+  <img src="./images/mobile/image-deep-earth.jpg" alt="picture of earth from space">
+  </picture>
+  <h3>DEEP EARTH</h3>
+  </div>
+  <div>
+  <picture>
+  <source media="(min-width: 768px)" srcset="./images/desktop/image-night-arcade.jpg">
+  <img src="./images/mobile/image-night-arcade.jpg" alt="picture of a game arcade">
+</picture>
+<h3>NIGHT ARCADE</h3>
+</div>
+<div>
+  <picture>
+  <source media="(min-width: 768px)" srcset="./images/desktop/image-soccer-team.jpg">
+  <img src="./images/mobile/image-soccer-team.jpg" alt="picture of a soccer team playing">
+</picture>
+<h3>SOCCER TEAM VR</h3>
+</div>
+<div>
+  <picture>
+  <source media="(min-width: 768px)" srcset="./images/desktop/image-grid.jpg">
+  <img src="./images/mobile/image-grid.jpg" alt="picture of a car">
+</picture>
+<h3>THE GRID</h3>
+</div>
+<div>
+  <picture>
+  <source media="(min-width: 768px)" srcset="./images/desktop/image-from-above.jpg">
+  <img src="./images/mobile/image-from-above.jpg" alt="pictur of a landscape from above">
+</picture>
+<h3>FROM UP ABOVE VR</h3>
+</div>
+<div>
+  <picture >
+  <source media="(min-width: 768px)" srcset="./images/desktop/image-pocket-borealis.jpg">
+  <img src="./images/mobile/image-pocket-borealis.jpg" alt="picture of the northern lights">
+</picture>
+<h3>POCKET BOREALIS</h3>
+</div>
+<div>
+  <picture>
+  <source media="(min-width: 768px)" srcset="./images/desktop/image-curiosity.jpg">
+  <img src="./images/mobile/image-curiosity.jpg" alt="picture of a telescope">
+</picture>
+<h3>THE CURIOSITY</h3>
+</div>
+<div>
+  <picture>
+  <source media="(min-width: 768px)" srcset="./images/desktop/image-fisheye.jpg">
+  <img src="./images/mobile/image-fisheye.jpg" alt="picture of a person using a fisheye lens">
+</picture>
+<h3>MAKE IT FISHEYE</h3>
+</div>
+</picture>
+<a href="#" class="see-all">SEE ALL</a>
+</div>
+</main>
+  <footer>
+    <section>
+    <img src="./images/logo.svg" alt="Loopstudios logo" class="footer-logo">
+    <div class="footer-nav">
+    <a href="#" target="_blank" rel="noopener">About</a>
+     <a href="#" target="_blank" rel="noopener">Careers</a>
+      <a href="#" target="_blank" rel="noopener">Events</a>
+       <a href="#" target="_blank" rel="noopener">Products</a>
+        <a href="#" target="_blank" rel="noopener">Support</a>
+        </div>
+        </section>
+        <section>
+        <div class="social-icons">
+          <a href="#" target="_blank" rel="noopener">
+            <img src="./images/icon-facebook.svg" alt="Facebook icon">
+          </a>
+          <a href="#" target="_blank" rel="noopener">
+            <img src="./images/icon-twitter.svg" alt="Twitter icon">
+          </a>
+          <a href="#" target="_blank" rel="noopener">
+            <img src="./images/icon-pinterest.svg" alt="Pinterest icon">
+          </a>
+          <a href="#" target="_blank" rel="noopener">
+            <img src="./images/icon-instagram.svg" alt="Instagram icon">
+          </a>
+        </div>
+        <p> © 2021 Loopstudios. All rights reserved.</p>
+        </section>
+  </footer>
 
-  Our creations
-
-  See all
-
-  Deep earth
-  Night arcade
-  Soccer team VR
-  The grid
-  From up above VR
-  Pocket borealis
-  The curiosity
-  Make it fisheye
-
-  About
-  Careers
-  Events
-  Products
-  Support
-
-  © 2021 Loopstudios. All rights reserved.
+ 
 
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" rel="noopener">Frontend Mentor</a>. 
+    Coded by <a href="httsp://onwuli-charles.netlify.app">Onwuli Charles</a>.
   </div>
+  <script src="script.js"></script>
 </body>
 </html>
