--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
       <img id="menu-icon-img" src="./images/icon-hamburger.svg" alt="Menu Icon">
     </button>
      </div>
-
-    <nav class="nav-menu" id="mobile-nav">
-      <a href="#">ABOUT</a>
-      <a href="#">CAREERS</a>
-      <a href="#">EVENTS</a>
-      <a href="#">PRODUCTS</a>
-      <a href="#">SUPPORT</a>
+<div>    <nav class="nav-menu" id="mobile-nav">
+      <a href="#">About</a>
+      <a href="#">Careers</a>
+      <a href="#">Events</a>
+      <a href="#">Products</a>
+      <a href="#">Support</a>
     </nav>
-    
+    </div>
+
    </header>
  <h1>IMMERSIVE EXPERIENCES THAT DELIVER</h1>
   </section>
@@ -40,6 +40,7 @@
   <source media="(min-width: 768px)" srcset="images/desktop/image-interactive.jpg">
   <img src="images/mobile/image-interactive.jpg" alt="picture of a person using virtual reality headset">
 </picture>
+<div class="interactive-text">
    <h2>
     THE LEADER IN INTERACTIVE VR
    </h2>
@@ -47,8 +48,12 @@
   projects for some of the best companies around the globe. Our award-winning 
   creations have transformed businesses through digital experiences that bind 
   to their brand.</P>
+  </div>
    </div>
+   <div class="creations-header">
 <h2>OUR CREATIONS</h2>
+<a href="#" class="see-all-one">SEE ALL</a>
+</div>
 <div class="creations-grid">
 <div>
  <picture>
@@ -107,7 +112,7 @@
 <h3>MAKE IT FISHEYE</h3>
 </div>
 </picture>
-<a href="#" class="see-all">SEE ALL</a>
+<a href="#" class="see-all-two">SEE ALL</a>
 </div>
 </main>
   <footer>
